# intro-heuristics

./: .gitmodules  Cargo.toml  shell.nix
nix/: sources.json
src/: data.rs  lib.rs  solver.rs  temperature.rs  visualizer.rs
